# epimac-fleet-back

./: .gitignore  manage.py  pyproject.toml
api/: urls.py  views.py
daemon/: admin.py  models.py
daemon/management/commands/: ping.py  sync.py  test.py
daemon/migrations/: 0001_initial.py  0002_rename_imac_imacmodel.py  0003_alter_imacmodel_options_imacmodel_mac_user.py  0004_imacmodel_alive_imacmodel_last_seen.py  0005_remove_imacmodel_alive_imacmodel_cpu_cores_and_more.py  0006_alter_imacmodel_storage_capacity.py  0007_imacmodel_report_status.py
daemon/utils/: notification.py  ping.py  ssh.py  sync.py  thread.py
fleet/: asgi.py  settings.py  urls.py  wsgi.py
