[tool.poetry]
name = "epimac-fleet-back"
version = "0.1.0"
description = ""
authors = ["Quentin Briolant <quentin.briolant@epita.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
paramiko = "^2.11.0"
rich = "^12.6.0"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
